@@ -1,3 +1,6 @@
+* Tue Nov 06 2018 Liz Nemsick <lnemsick-simp@gmail.com> - 0.1.0-0
+- Update badges in README.md
+
 * Fri Oct 12 2018 Nick Miller <nick.miller@onyxpoint.com> - 0.1.0-0
 - Added $package_ensure parameter
   - Changed the package from 'latest' to 'installed'
